# bis

./: .gitignore  .project-config.json  AUDIT_FINDINGS.md  Dockerfile.bff  FUND_FLOW_GUARANTEE_REPORT.md  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  ideas.md  openapi.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  routers.ts  seed-db.mjs  skill.json  todo.md  vite.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  branch-protection.json  branch-protection.md
.github/workflows/: ci-go.yml  ci-node.yml  ci-rust.yml  ci.yml  load-test.yml
.manus/db/: db-query-error-1774377385693.json
bis-mobile/: README.md  app.json  package.json  pnpm-lock.yaml
bis-mobile/app/: _layout.tsx
bis-mobile/hooks/: useAuth.ts  usePushNotifications.ts
bis-mobile/lib/: trpc.ts
client/: index.html
client/public/: manifest.json  sw.js
client/src/: App.tsx  index.css  main.tsx
docs/: api-reference.md  architecture.md  environment-variables.md  lex-architecture.md  pentest-readiness-phase47.md  production-readiness-scorecard.md  runbook.md  security-audit-phase44.md  security-audit-phase45.md
docs/architecture/: 1b-payments-lessons.md
docs/ci-workflows/: ci-python.yml  deploy.yml  docker.yml  load-test.yml  security.yml  smoke-test.yml
docs/security/: security-audit-v60.md  security-audit-v61.md  security-audit-v64.md  security-audit-v65.md  security-audit-v66.md  security-audit-v67.md
drizzle/: 0000_initial_schema.sql  0001_early_thunderbolt_ross.sql  0001_smooth_hammerhead.sql  0002_clean_gargoyle.sql  0002_far_the_initiative.sql  0003_marvelous_radioactive_man.sql  0004_noisy_groot.sql  0005_special_young_avengers.sql  0006_abandoned_sharon_ventura.sql  0007_cuddly_alex_wilder.sql  0008_sparkling_vertigo.sql  0009_unique_sprite.sql  0010_stiff_boom_boom.sql  0011_square_colonel_america.sql  0012_lying_misty_knight.sql  0013_unique_xavin.sql  0014_swift_doomsday.sql  0015_good_pete_wisdom.sql  0015_lush_wrecker.sql  0016_mighty_norman_osborn.sql  0017_yielding_star_brand.sql  0018_careless_jane_foster.sql  0019_eminent_firebird.sql  0020_superb_flatman.sql  0021_secret_jimmy_woo.sql  0022_wonderful_bloodaxe.sql  0023_brief_living_lightning.sql  0024_fair_mulholland_black.sql  0025_moaning_marvel_zombies.sql  0026_plain_norman_osborn.sql  0027_wandering_silver_sable.sql  0028_dear_sinister_six.sql  0029_shiny_hiroim.sql  0030_graceful_dreadnoughts.sql  0031_breezy_fantastic_four.sql  0032_unique_richard_fisk.sql  0033_clumsy_killmonger.sql  0034_stale_leader.sql  0035_clean_toad_men.sql  0036_purple_black_cat.sql  (+15 more)
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0019_snapshot.json  0020_snapshot.json  0021_snapshot.json  0022_snapshot.json  0023_snapshot.json  0024_snapshot.json  0025_snapshot.json  0026_snapshot.json  0027_snapshot.json  0028_snapshot.json  0029_snapshot.json  0030_snapshot.json  0031_snapshot.json  0032_snapshot.json  0033_snapshot.json  0034_snapshot.json  0035_snapshot.json  0036_snapshot.json  0037_snapshot.json  0038_snapshot.json  0039_snapshot.json  (+9 more)
e2e/: auth.spec.ts  biometric.spec.ts  bis-features.spec.ts  core-workflows.spec.ts  dashboard.spec.ts  health.spec.ts  lex-sms.spec.ts  new-features.spec.ts  security-headers.spec.ts  setup-auth.ts
infra/: bootstrap.sh
infra/kafka/: init-topics.sh
infra/keycloak/: bis-realm.json
infra/nginx/: nginx.conf
infra/open-appsec/: README.md  apisix-plugin-config.yaml  docker-compose.override.yml  local_policy.yaml  (+2 more)
k6/: README.md  payment-load-test.js  verification-load-test.js
mobile/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
scripts/: add_bulk_modal.py  add_export_osint.py  add_history_pdf.py  add_pdf_button.py  create-archive-v67.py  create-archive-v68.py  create-archive-v69.py  fix_bulk_modal.py  fix_indeterminate.py  fix_pagination_limits.py  mark-todos-done.py  move_useeffect.py  seed-db.mjs  smoke-test.sh  smoke-test.ts  waf-smoke-test.sh
sdk/: README.md
server/: alertRules.ts  aml.ts  apiTokens.ts  archival.ts  archivalScheduler.ts  banking.ts  billing.test.ts  billing.topup.idempotency.test.ts  billing.ts  biometric.test.ts  biometric.ts  biometricSessionLogArchiver.ts  biometricSpoofAlertScheduler.ts  broadcastScheduler.ts  cache.ts  cases.phase40.test.ts  cases.phase41.test.ts  circuitBreaker.ts  criminal-records.test.ts  dapr.ts  dataSourcesHealthScheduler.ts  db.ts  documentVault.ts  env.secrets.test.ts  envValidation.ts  field-visit.export.test.ts  field-visit.geodata.test.ts  field-visit.phase3.test.ts  field-visit.phase4.test.ts  field-visit.thinfile.test.ts  fluvio.ts  fluvio.velocity.integration.test.ts  getWorkflowStatus.test.ts  goaml.ts  index.ts  insiderThreat.test.ts  insiderThreat.ts  insiderThreatMiddleware.ts  investigations.ai-corporate.test.ts  investigations.screening.test.ts  (+60 more)
services/: README.md
services/aml-engine/: Cargo.toml  Dockerfile
services/aml-engine/src/: dlq.rs  lib.rs  main.rs  metrics.rs  sdn_sync.rs
services/event-emitter/: Cargo.toml  Dockerfile
services/event-emitter/src/: main.rs
services/event-processor/: Cargo.toml  Dockerfile  README.md
services/event-processor/src/: api_usage.rs  db.rs  insider_threat.rs  main.rs  otel.rs  tests.rs  traceparent.rs
services/event-processor/src/kafka/: consumer.rs  handlers.rs  mod.rs
services/fluvio-velocity/: Cargo.toml
services/fluvio-velocity/src/: lib.rs  main.rs  mtls_cert_inspect.rs
services/kafka-schema-registry/: Cargo.toml
services/kafka-schema-registry/src/: lib.rs
services/screening-engine/: Cargo.toml
services/screening-engine/src/: db.rs  main.rs
shared/: const.ts  constants.ts
(+365 files in other folders)
