[package]
name = "bis-aml-engine"
version = "1.0.0"
edition = "2021"
description = "BIS AML Scoring Engine — rule-based transaction risk scorer with evidence integrity verifier"

[[bin]]
name = "bis-aml-engine"
path = "src/main.rs"

[lib]
name = "aml_engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
