[package]
name = "bis-event-emitter"
version = "0.1.0"
edition = "2021"
description = "BIS Platform — Rust event streaming pipeline (audit trail + case events)"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
