[package]
name = "bis-event-processor"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bis-event-processor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
dashmap = "5"
# HTTP client — used for webhook fan-out and BFF forwarding
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Native Kafka consumer/producer — requires librdkafka-dev in the Docker build image.
# Enable with: cargo build --features kafka-native
# Docker: RUN apt-get install -y librdkafka-dev cmake
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"], optional = true }
# Redis async client — for pub/sub fan-out and alert caching
# Enable with: cargo build --features redis-pubsub
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
# PostgreSQL async client — for persisting audit log and subscriptions
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.14" }

[features]
default = []
# Enable native Kafka consumer (requires librdkafka-dev in build environment)
kafka-native = ["dep:rdkafka"]
# Enable Redis pub/sub for real-time alert fan-out
redis-pubsub = ["dep:redis"]
# Enable both Kafka and Redis
full = ["kafka-native", "redis-pubsub"]
