[package]
name        = "fluvio-velocity"
version     = "0.1.0"
edition     = "2021"
description = "BIS real-time payment velocity checks using Fluvio streaming"

[[bin]]
name = "fluvio-velocity"
path = "src/main.rs"

[lib]
name = "velocity_lib"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# HTTP client for alerting back to BIS gateway
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server for /health, /metrics, /event endpoints
axum        = { version = "0.7", features = ["json"] }
tower-http  = { version = "0.5", features = ["cors"] }

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config from environment
dotenvy = "0.15"

# UUID generation for alert IDs
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
