[package]
name        = "kafka-schema-registry"
version     = "0.1.0"
edition     = "2021"
description = "BIS Kafka Avro schema registry — validates, versions, and evolves Avro schemas for BIS event topics"

[lib]
name = "schema_registry"
path = "src/lib.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
hex         = "0.4"
thiserror   = "1"

[dev-dependencies]
