[package]
name = "screening-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screening-engine"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid            = { version = "1", features = ["v4"] }
chrono          = { version = "0.4", features = ["serde"] }
rdkafka         = { version = "0.36", features = ["cmake-build"] }
redis           = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
thiserror       = "1"
anyhow          = "1"
prometheus      = { version = "0.13", features = ["process"] }
axum-prometheus = "0.7"
base64          = "0.22"
hmac            = "0.12"
sha2            = "0.10"
hex             = "0.4"

# PostgreSQL async client — for persisting screening results
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.14" }
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
